# prodapi-mvp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0e3e21310e66_initial_schema.py
prodapi/: __init__.py  app.py  config.py  database.py  deps.py
prodapi/automations/: __init__.py  base.py  daily_digest.py  github_monitor.py
prodapi/models/: __init__.py  api_key.py  automation.py  base.py  run.py  schedule.py
prodapi/routers/: __init__.py  api_keys.py  automations.py  health.py  runs.py  schedules.py
prodapi/schemas/: __init__.py  api_key.py  automation.py  run.py  schedule.py  webhook.py
prodapi/services/: auth.py  runner.py  scheduler.py  webhook.py
tests/: __init__.py  conftest.py  factories.py  test_api_keys.py  test_automations.py  test_daily_digest.py  test_github_monitor.py  test_runner.py  test_runs.py  test_schedules.py  test_webhook.py
