[project]
name = "prodapi"
version = "0.1.0"
description = "API de produtividade para automações"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4,<4.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pyright>=1.1.0",
    "deptry>=0.22.0",
    "pip-audit>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["prodapi"]
branch = true
omit = [
    "tests/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "tests.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
exclude = ["tests/**", ".venv/**", "alembic/versions/**"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # FastAPI uses function calls in defaults (Query, Path, etc)
]

[tool.ruff.lint.isort]
known-first-party = ["prodapi"]

[tool.deptry]
extend_exclude = ["tests", "alembic"]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP002 = [
    "uvicorn",
    "aiosqlite",
    "asyncpg",
    "alembic",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "coverage",
    "ruff",
    "mypy",
    "pyright",
    "deptry",
    "pip-audit",
]
